objects/Resposta__c.object
<CustomObject>
    <label>Resposta</label>
    <nameField>
        <displayFormat>R - {00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Secao__c</fullName>
        <formula>Pergunta__r.Secao__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seção</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Respostas</relationshipLabel>
        <relationshipName>Respostas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambiente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ambiente</label>
        <referenceTo>Ambiente__c</referenceTo>
        <relationshipLabel>Respostas</relationshipLabel>
        <relationshipName>Respostas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pergunta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pergunta</label>
        <referenceTo>Questionario__c</referenceTo>
        <relationshipLabel>Respostas</relationshipLabel>
        <relationshipName>Respostas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resposta__c</fullName>
        <label>Resposta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RespostaUBS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <formula>TEXT(Pergunta__r.Categoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubCategoria__c</fullName>
        <formula>TEXT(Pergunta__r.Subcategoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubCategoria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPrincipal__c</fullName>
        <formula>Pergunta__r.ItemPrincipal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaUnidade__c</fullName>
        <formula>IF( Unidade__c != &apos;&apos;, Unidade__r.Name,  Ambiente__r.UBS__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormulaUnidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaPergunta__c</fullName>
        <formula>Pergunta__r.Pergunta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pergunta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaUnidade_c__c</fullName>
        <formula>FormulaUnidade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom_Formula_Unidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespostaRealizada__c</fullName>
        <formula>IF(ISBLANK( TEXT(Resposta__c) ) ,&quot;&quot;, &quot;✅&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resposta realizada</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Categoria__c</columns>
        <columns>SubCategoria__c</columns>
        <columns>Ambiente__c</columns>
        <columns>Unidade__c</columns>
        <columns>Pergunta__c</columns>
        <columns>FormulaUnidade__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Respostas_Respondidas</fullName>
        <columns>NAME</columns>
        <columns>Categoria__c</columns>
        <columns>SubCategoria__c</columns>
        <columns>Ambiente__c</columns>
        <columns>Unidade__c</columns>
        <columns>Pergunta__c</columns>
        <columns>Resposta__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resposta__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Respostas Respondidas</label>
    </listViews>
</CustomObject>